--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,73 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  font-family: "Poppins";
+  height: 100vh;
+}
+
+.background-core {
+  background: #0a0a0a;
+}
+.color-neutral-content {
+  color: #a4a4a4;
+}
+
+.color-core-border {
+  border: 1px solid #3d3d3d;
+}
+
+.creepster-font {
+  font-family: "Creepster";
+}
+
+.creepster-tittle {
+  font-family: "Creepster";
+  color: #00b5cc;
+  text-shadow: -2px 0 #b2df28, 0 2px #b2df28, 2px 0 #b2df28, 0 -2px #b2df28;
+}
+
+.not-found-title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: -0.02em;
+  text-align: center;
+}
+
+.not-found-description {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  text-align: center;
+}
+.input {
+  position: relative;
+}
+
+.input__label {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  z-index: 3px;
+  font-size: 16px;
+  white-space: nowrap;
+  transform: translate(0, 0);
+  transform-origin: 0 0;
+  transition: transform 120ms ease-in;
+  line-height: 1.2;
+}
+
+.input__field {
+  font-size: 12px;
+  padding: 10px;
+  box-sizing: border-box;
+  display: block;
+  width: 328px;
+  background: transparent;
+}
+
+.input__field:focus + .input__label,
+.input__field:not(:placeholder-shown) + .input__label {
+  background: #1f1f1f;
+  transform: translate(0.25rem, -45%) scale(0.8);
+}
