--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.min.css";
 html,
 body {
   font-family: "Poppins";
